<resources>
    <string name="app_name">Smart EDEN</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login</string>
    <string name="home_fragment_label">Home</string>
    <string name="add_greenhouse_label">Gewächshaus hinzufügen</string>
    <string name="qr_code_scanner_label">QR Code Scanner</string>
    <string name="fieldoverview_label">Gewächshaus Überblick</string>
    <string name="share_greenhouse_label">Gewächshaus teilen</string>
    <string name="fieldinfo_label">Feld Überblick</string>
    <string name="plant_new_plant_label">Pflanze pflanzen</string>
    <string name="custom_plant_label">Benutzerdefinierte Pflanze</string>
    <string name="control_label">Gewächshaus Steuerung</string>
    <string name="live_label">Heute</string>

    <!-- general strings -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_greenhouse">add greenhouse</string>
    <string name="txtpflanze">Pflanze:</string>
    <string name="txtbewaesserung">Bewässerung:</string>
    <string name="txterntezeitpunkt">Erntezeitpunkt:</string>
    <string name="txthumidity">Feuchtigkeit:</string>
    <string name="txtbewaesserungstarten">Bewässerung starten:</string>
    <string name="txttemperatur">Temperatur:</string>
    <string name="txtstartofslidervalue">0%</string>
    <string name="log_off">Ausloggen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
