<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/fieldinfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.greenhousefields.Fieldinfo">

        <TextView
            android:id="@+id/field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andika"
            android:text=""
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="?android:attr/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="12dp"
            android:background="?colorOnPrimaryContainer"
            tools:ignore="PrivateResource" />

        <TextView
            android:id="@+id/plant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/txtpflanze" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="12dp"
            android:background="?attr/colorOnPrimaryContainer"
            tools:ignore="PrivateResource"/>

        <TextView
            android:id="@+id/watering_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="?colorPrimary"
            android:text="@string/txtbewaesserung" />

        <TextView
            android:id="@+id/harvest_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:text="@string/txterntezeitpunkt" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginVertical="12dp"
            android:text="@string/txthumidity" />
        <TextView
            android:id="@+id/sliderValueTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtstartofslidervalue"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sliderstyle">

        <SeekBar
            android:id="@+id/moisture_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>
        </FrameLayout>
        <Button
            android:id="@+id/watering_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtbewaesserungstarten"
            android:layout_marginTop="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="12dp"
            android:background="?colorOnPrimaryContainer"
            tools:ignore="PrivateResource"/>

        <TextView
            android:id="@+id/temperature_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="?colorPrimary"
            android:text="@string/txttemperatur" />

        <TextView
            android:id="@+id/temperature_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txttemperatur"
            />

    </LinearLayout>

